DRY; add find_deals
Sale prices are still messed up, need to fix that.

--- a/price.ipynb
+++ b/price.ipynb
@@ -190,10 +190,12 @@
     "    return features\n",
     "\n",
     "def json_to_sell_order_price(in_json):\n",
-    "    \"\"\"Prices are based on the current sell orders, which probably can be improved. Denominated in ETH.\"\"\"\n",
+    "    \"\"\"Prices are based on the current sell orders, which probably can be improved. Denominated in ETH. (Double check these, OpenSea API is a bit weird here.)\"\"\"\n",
     "    if in_json['sell_orders'] is None:\n",
     "        return None\n",
     "    so = in_json['sell_orders'][0]\n",
+    "    if so['payment_token_contract']['symbol'] not in ['ETH', 'WETH']:\n",
+    "        return None # need to understand better, OpenSea seems to be doing weird stuff w/USDC sales.\n",
     "    eth_price = float(so['payment_token_contract']['eth_price'])\n",
     "    return (float(so['current_price']) / 1000000000000000000.0) * eth_price\n",
     "\n",
@@ -237,9 +239,47 @@
     "        return None\n",
     "    return in_model.predict([asset[0]])[0] / asset[1]\n",
     "\n",
-    "\n",
     "def feature_vector_to_traits(fv):\n",
-    "    return [idx_to_trait[idx] for idx in range(len(fv)) if fv[idx]]            "
+    "    return [idx_to_trait[idx] for idx in range(len(fv)) if fv[idx]]            \n",
+    "\n",
+    "def good_asset_price(price):\n",
+    "    return price is not None and price > 10\n",
+    "\n",
+    "def eval_model(eval_model, X, Y):\n",
+    "    print(f\"Score: {eval_model.score(X,Y)}\")\n",
+    "    print(f\"Num Features: {len(Y)}\")\n",
+    "    deltas = [(k, price_delta(eval_model, assets[k])) for k in assets if good_asset_price(assets[k][1])]\n",
+    "    deltas.sort(key=lambda x: x[1])\n",
+    "    print(f\"Overvalued sales (absolute): {deltas[:3]}\")\n",
+    "    print(f\"Undervalued sales (absolute): {deltas[-3:]}\")\n",
+    "    deltas = [(k, price_premium_percentage(eval_model, assets[k])) for k in assets if good_asset_price(assets[k][1])]\n",
+    "    deltas.sort(key=lambda x: x[1])\n",
+    "    print(f\"Overvalued sales (relative): {deltas[:3]}\")\n",
+    "    print(f\"Undervalued sales (relative): {deltas[-3:]}\")\n",
+    "    # correlation between trait count and trait coefficient (i.e. rarity impact)\n",
+    "    trait_counts = [float(trait_to_count[idx_to_trait[idx]]) for idx in range(len(trait_to_count))]\n",
+    "    print(f\"Trait count / price impact correlation: {pearsonr(eval_model.coef_, trait_counts)}\")\n",
+    "    unseen_traits = [t for t in trait_to_idx if trait_to_idx[t] not in seen_feature_idx]\n",
+    "    unseen_traits.sort()\n",
+    "    print(\"\\nUnseen traits:\")\n",
+    "    for t in unseen_traits:\n",
+    "        print(f\"\\t{t}\")\n",
+    "    print(\"\\nTrait weights:\")\n",
+    "    for tw in trait_weights(eval_model, unseen_traits):\n",
+    "        if tw[1]:\n",
+    "            print(f\"\\t{tw[0]}\\t{tw[1]}\")\n",
+    "            \n",
+    "def find_deals(model, assets, top_n=5):\n",
+    "    def all_traits_seen(asset):\n",
+    "        for idx, v in enumerate(asset[0]):\n",
+    "            if v and (idx not in seen_feature_idx):\n",
+    "                return False\n",
+    "        return True\n",
+    "    deals = [(aid, model.predict([assets[aid][0]])[0], assets[aid][2]) for aid in assets if assets[aid][2] and all_traits_seen(assets[aid])]\n",
+    "    deals.sort(key=lambda x: x[2] - x[1])\n",
+    "    print(\"Deals\\t(id, predicted price, sale price, delta)\")\n",
+    "    for x in deals[:top_n]:\n",
+    "        print(f\"\\t{x[0]}\\t{x[1]}\\t{x[2]}\\t{x[1]-x[2]}\")"
    ]
   },
   {
@@ -249,12 +289,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "assets = {} # dict from asset id to (features, price)\n",
+    "assets = {} # dict from asset id to (features, last sale price, current list price)\n",
     "\n",
     "with open(collection_file, 'r') as f:\n",
     "    for l in f.readlines():\n",
     "        json_asset = json.loads(l)\n",
-    "        assets[json_asset['token_id']] = (json_to_trait_features(json_asset), json_to_last_sale_price(json_asset, in_last_days=30))"
+    "        assets[json_asset['token_id']] = (json_to_trait_features(json_asset), json_to_last_sale_price(json_asset, in_last_days=30), json_to_sell_order_price(json_asset))"
    ]
   },
   {
@@ -266,9 +306,6 @@
    "source": [
     "X = []\n",
     "Y = []\n",
-    "\n",
-    "def good_asset_price(price):\n",
-    "    return price is not None and price < 995 and price > 10\n",
     "\n",
     "seen_feature_idx = set()\n",
     "\n",
@@ -299,45 +336,8 @@
    "outputs": [],
    "source": [
     "model = LinearRegression(fit_intercept=False).fit(X, Y)\n",
-    "print(model.score(X, Y))\n",
-    "print(len(Y))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "288f6b59-d90c-462b-8aa2-c7f9bf74bacf",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "deltas = [(k, price_delta(model, assets[k])) for k in assets if good_asset_price(assets[k][1])]\n",
-    "deltas.sort(key=lambda x: x[1])\n",
-    "print(deltas[:3])\n",
-    "print(deltas[-3:])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "18438ec9-4190-41c0-90d6-d46c9d66afde",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "unseen_traits = [t for t in trait_to_idx if trait_to_idx[t] not in seen_feature_idx]\n",
-    "unseen_traits.sort()\n",
-    "for t in unseen_traits:\n",
-    "    print(t)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f973cb5f-116d-42a9-80d9-209f846d2d9c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for tw in trait_weights(model, unseen_traits):\n",
-    "    print(f\"{tw[0]}\\t{tw[1]}\")"
+    "eval_model(model, X, Y)\n",
+    "find_deals(model, assets)"
    ]
   },
   {
@@ -356,19 +356,7 @@
    "outputs": [],
    "source": [
     "lmodel = Lasso().fit(X, Y)\n",
-    "print(lmodel.score(X,Y))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0039d468-9cf0-4285-afe0-7ad0b297355a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for i, v in enumerate(lmodel.coef_):\n",
-    "    if v:\n",
-    "        print(f\"{idx_to_trait[i]}\\t{v}\")"
+    "eval_model(lmodel, X, Y)"
    ]
   },
   {
@@ -387,7 +375,7 @@
    "outputs": [],
    "source": [
     "elmodel = ElasticNet().fit(X, Y)\n",
-    "print(elmodel.score(X,Y))"
+    "eval_model(elmodel, X, Y)"
    ]
   },
   {
@@ -406,68 +394,8 @@
    "outputs": [],
    "source": [
     "rmodel = Ridge().fit(X,Y)\n",
-    "print(rmodel.score(X,Y))\n",
-    "print(rmodel.intercept_)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "add942a9-3841-4906-abae-205e1f5c243e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for tw in trait_weights(rmodel, unseen_traits):\n",
-    "    print(f\"{tw[0]}\\t{tw[1]}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "52b39f29-0ccb-4e36-b8a0-27a5f478226a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "deltas = [(k, price_delta(rmodel, assets[k])) for k in assets if good_asset_price(assets[k][1])]\n",
-    "deltas.sort(key=lambda x: x[1])\n",
-    "print(deltas[:3])\n",
-    "print(deltas[-3:])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "74184032-12f0-45ee-be89-c290340c24fe",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "deltas = [(k, price_premium_percentage(rmodel, assets[k])) for k in assets if good_asset_price(assets[k][1])]\n",
-    "deltas.sort(key=lambda x: x[1])\n",
-    "print(deltas[:3])\n",
-    "print(deltas[-3:])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dabbbbea-2f5e-49fc-8463-052bd166e85c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# correlation between trait count and trait coefficient (i.e. rarity impact)\n",
-    "trait_counts = [float(trait_to_count[idx_to_trait[idx]]) for idx in range(len(trait_to_count))]\n",
-    "print(pearsonr(rmodel.coef_, trait_counts))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ae05891e-e9a0-4118-88d3-aaadaa473225",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(rmodel.predict([assets['6253'][0]]))\n",
-    "print(assets['8585'][1])"
+    "eval_model(rmodel, X, Y)\n",
+    "find_deals(model, assets)"
    ]
   }
  ],
