--- a/price.ipynb
+++ b/price.ipynb
@@ -194,7 +194,7 @@
     "    if in_json['sell_orders'] is None:\n",
     "        return None\n",
     "    so = in_json['sell_orders'][0]\n",
-    "    if so['payment_token_contract']['symbol'] not in ['ETH', 'WETH']:\n",
+    "    if so['payment_token_contract']['symbol'] not in ['ETH']:\n",
     "        return None # need to understand better, OpenSea seems to be doing weird stuff w/USDC sales.\n",
     "    eth_price = float(so['payment_token_contract']['eth_price'])\n",
     "    return (float(so['current_price']) / 1000000000000000000.0) * eth_price\n",
@@ -275,9 +275,10 @@
     "            if v and (idx not in seen_feature_idx):\n",
     "                return False\n",
     "        return True\n",
-    "    deals = [(aid, model.predict([assets[aid][0]])[0], assets[aid][2]) for aid in assets if assets[aid][2] and all_traits_seen(assets[aid])]\n",
+    "    sale_deltas = [(aid, model.predict([assets[aid][0]])[0], assets[aid][2]) for aid in assets if assets[aid][2] and all_traits_seen(assets[aid])]\n",
+    "    deals = list(filter(lambda x: x[1] - x[2] > 0, sale_deltas))\n",
     "    deals.sort(key=lambda x: x[2] - x[1])\n",
-    "    print(\"Deals\\t(id, predicted price, sale price, delta)\")\n",
+    "    print(f\"Deals (total {len(deals)}/{len(sale_deltas)})\\t(id, predicted price, sale price, delta)\")\n",
     "    for x in deals[:top_n]:\n",
     "        print(f\"\\t{x[0]}\\t{x[1]}\\t{x[2]}\\t{x[1]-x[2]}\")"
    ]
@@ -395,7 +396,7 @@
    "source": [
     "rmodel = Ridge().fit(X,Y)\n",
     "eval_model(rmodel, X, Y)\n",
-    "find_deals(model, assets)"
+    "find_deals(model, assets, top_n=50)"
    ]
   }
  ],
