Add price explanation func
Also handle fractional seconds from OpenSea

--- a/price.ipynb
+++ b/price.ipynb
@@ -199,12 +199,16 @@
     "    eth_price = float(so['payment_token_contract']['eth_price'])\n",
     "    return (float(so['current_price']) / 1000000000000000000.0) * eth_price\n",
     "\n",
+    "def convert_ts_string(ts_str):\n",
+    "    \"\"\"Strips fractional seconds before conversion.\"\"\"\n",
+    "    return datetime.strptime(ts_str.split('.')[0], '%Y-%m-%dT%H:%M:%S')\n",
+    "\n",
     "def json_to_last_sale_price(in_json, in_last_days=30):\n",
     "    \"\"\"Prices are based on prior sales. Denominated in ETH.\"\"\"\n",
     "    if in_json['last_sale'] is None:\n",
     "        return None\n",
     "    s = in_json['last_sale']\n",
-    "    sale_ts = datetime.strptime(s['event_timestamp'], '%Y-%m-%dT%H:%M:%S')\n",
+    "    sale_ts = convert_ts_string(s['event_timestamp'])\n",
     "    cutoff = datetime.now() - timedelta(days=in_last_days)\n",
     "    if sale_ts < cutoff:\n",
     "        return None\n",
@@ -244,6 +248,13 @@
     "\n",
     "def good_asset_price(price):\n",
     "    return price is not None and price > 10\n",
+    "\n",
+    "def explained_score(eval_model, asset):\n",
+    "    print(f\"Average price: {eval_model.intercept_}\")\n",
+    "    for idx, v in enumerate(asset[0]):\n",
+    "        if v:\n",
+    "            print(f\"\\t{idx_to_trait[idx]}\\t{eval_model.coef_[idx]}\")\n",
+    "    print(f\"Total: {eval_model.predict([asset[0]])[0]}\")\n",
     "\n",
     "def eval_model(eval_model, X, Y):\n",
     "    print(f\"Score: {eval_model.score(X,Y)}\")\n",
@@ -396,7 +407,7 @@
    "source": [
     "rmodel = Ridge().fit(X,Y)\n",
     "eval_model(rmodel, X, Y)\n",
-    "find_deals(model, assets, top_n=50)"
+    "find_deals(model, assets, top_n=50)\n"
    ]
   }
  ],
