--- a/price.ipynb
+++ b/price.ipynb
@@ -289,9 +289,10 @@
     "    sale_deltas = [(aid, model.predict([assets[aid][0]])[0], assets[aid][2]) for aid in assets if assets[aid][2] and all_traits_seen(assets[aid])]\n",
     "    deals = list(filter(lambda x: x[1] - x[2] > 0, sale_deltas))\n",
     "    deals.sort(key=lambda x: x[2] - x[1])\n",
-    "    print(f\"Deals (total {len(deals)}/{len(sale_deltas)})\\t(id, predicted price, sale price, delta)\")\n",
+    "    print(f\"Deals (total {len(deals)}/{len(sale_deltas)})\\t(id, predicted price, sale price, delta, ROI)\")\n",
     "    for x in deals[:top_n]:\n",
-    "        print(f\"\\t{x[0]}\\t{x[1]}\\t{x[2]}\\t{x[1]-x[2]}\")"
+    "        delta = x[1] - x[2]\n",
+    "        print(f\"\\t{x[0]}\\t{x[1]}\\t{x[2]}\\t{delta}\\t{delta/x[2]}\")"
    ]
   },
   {
@@ -407,7 +408,7 @@
    "source": [
     "rmodel = Ridge().fit(X,Y)\n",
     "eval_model(rmodel, X, Y)\n",
-    "find_deals(model, assets, top_n=50)\n"
+    "find_deals(rmodel, assets, top_n=50)\n"
    ]
   }
  ],
