--- a/price.ipynb
+++ b/price.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d12d0c38-a87c-42fc-8f43-9bb3d7efb3a7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### SET THIS API KEY\n",
+    "API_KEY= ''"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "698d9cda-bfcd-4564-8e93-5dc3e3b0ee68",
    "metadata": {},
@@ -51,7 +62,10 @@
     "        'limit': MAX_RES,\n",
     "        'collection': COLLECTION,\n",
     "    }\n",
-    "    r = requests.get('https://api.opensea.io/api/v1/assets', params=p)\n",
+    "    h = {\n",
+    "        'X-API-KEY': API_KEY\n",
+    "    }\n",
+    "    r = requests.get('https://api.opensea.io/api/v1/assets', params=p, headers=h)\n",
     "    return r.json()\n"
    ]
   },
@@ -409,6 +423,32 @@
     "rmodel = Ridge().fit(X,Y)\n",
     "eval_model(rmodel, X, Y)\n",
     "find_deals(rmodel, assets, top_n=50)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "36fcb328-a90d-422e-b938-91e67f027f59",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7251d4b2-2b4b-477d-ae0c-d2f6deceabc9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## SCRATCH\n",
+    "\n",
+    "\n",
+    "with open(collection_file, 'r') as f:\n",
+    "    for l in f.readlines():\n",
+    "        json_asset = json.loads(l)\n",
+    "        if json_to_last_sale_price(json_asset) and json_asset['token_id'][0] != '1':\n",
+    "            print(json.dumps(json_asset))\n",
+    "            break"
    ]
   }
  ],
