--- a/price.ipynb
+++ b/price.ipynb
@@ -3,12 +3,39 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "e4633c21-663d-41ef-9da1-533f2a3e1dbd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from datetime import datetime \n",
+    "\n",
+    "def convert_ts_string(ts_str):\n",
+    "    \"\"\"Strips fractional seconds before conversion.\"\"\"\n",
+    "    return datetime.strptime(ts_str.split('.')[0], '%Y-%m-%dT%H:%M:%S')\n",
+    "\n",
+    "def trait_name(trait_json):\n",
+    "    return f\"{trait_json['trait_type']}_{trait_json['value']}\".replace(' ', '-')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "414e8359-58c4-4bfb-883d-d84adfe5c989",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "# Load API Key from ./apikey.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "d12d0c38-a87c-42fc-8f43-9bb3d7efb3a7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "### SET THIS API KEY\n",
-    "API_KEY= ''"
+    "with open('apikey.txt', 'r') as f:\n",
+    "    API_KEY = f.read().strip()"
    ]
   },
   {
@@ -16,7 +43,7 @@
    "id": "698d9cda-bfcd-4564-8e93-5dc3e3b0ee68",
    "metadata": {},
    "source": [
-    "## Change these if not running over BAYC"
+    "# Change these if not running over BAYC"
    ]
   },
   {
@@ -30,7 +57,8 @@
     "COLLECTION_SIZE = 10000\n",
     "\n",
     "collection_file = f\"{COLLECTION}.ndjson\"\n",
-    "traits_file = f\"{COLLECTION}_traits.tsv\""
+    "traits_file = f\"{COLLECTION}_traits.tsv\"\n",
+    "sales_file = f\"{COLLECTION}_sales.ndjson\""
    ]
   },
   {
@@ -38,7 +66,7 @@
    "id": "ef5ea5ae-bb99-4378-a2c7-fd230bde3ab4",
    "metadata": {},
    "source": [
-    "# Load Collection Data (only needs to run once per collection)"
+    "## Load Collection Data (only needs to run once per collection)"
    ]
   },
   {
@@ -85,7 +113,6 @@
     "        for a in res['assets']:\n",
     "            of.write(json.dumps(a))\n",
     "            of.write('\\n')\n",
-    "        time.sleep(0.25)\n",
     "        cur_offset += MAX_RES"
    ]
   },
@@ -94,7 +121,7 @@
    "id": "b41d1b42-dfc9-434c-a266-bac9a3e0908b",
    "metadata": {},
    "source": [
-    "# Get Traits"
+    "## Get Traits"
    ]
   },
   {
@@ -106,9 +133,6 @@
    "source": [
     "import json\n",
     "\n",
-    "def trait_name(trait_json):\n",
-    "    return f\"{trait_json['trait_type']}_{trait_json['value'].replace(' ', '-')}\"\n",
-    "\n",
     "traits = {}\n",
     "\n",
     "with open(collection_file, 'r') as f:\n",
@@ -119,6 +143,69 @@
     "    with open(traits_file, 'w') as of:\n",
     "        for t in sorted(traits):\n",
     "            of.write(f\"{t}\\t{traits[t]}\\n\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4015db64-35c7-4bd3-8c0d-9a11c966ba87",
+   "metadata": {},
+   "source": [
+    "## Get Sales"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e8c413ca-d7e1-42f1-8ab1-bdb6f90ee299",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "import requests\n",
+    "\n",
+    "MAX_RES = 300\n",
+    "\n",
+    "def fetch_page(ts):\n",
+    "    p = {\n",
+    "        'limit': MAX_RES,\n",
+    "        'collection_slug': COLLECTION,\n",
+    "        'only_opensea': False,\n",
+    "        'event_type': 'successful',\n",
+    "        'occurred_before': ts,\n",
+    "    }\n",
+    "    h = {\n",
+    "        'X-API-KEY': API_KEY\n",
+    "    }\n",
+    "    r = requests.get('https://api.opensea.io/api/v1/events', params=p, headers=h)\n",
+    "    return r.json()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b0669662-a5ad-4386-98aa-54ab8d524635",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time\n",
+    "\n",
+    "# we have to walk backward through the sales because:\n",
+    "# - the API breaks if offset is > 10000\n",
+    "# - the API does not give the oldest event for 'occurred_after' = 0\n",
+    "cur_ts = int(time.time())\n",
+    "# using append to make retries easier\n",
+    "with open(sales_file, 'a') as of:\n",
+    "    while True:\n",
+    "        res = fetch_page(cur_ts)\n",
+    "        if 'asset_events' not in res:\n",
+    "            print(res)\n",
+    "            break\n",
+    "        if not res['asset_events']:\n",
+    "            break\n",
+    "        for e in res['asset_events']:\n",
+    "            of.write(json.dumps(e))\n",
+    "            of.write('\\n')\n",
+    "        cur_ts = convert_ts_string(res['asset_events'][-1]['transaction']['timestamp'])"
    ]
   },
   {
@@ -152,19 +239,6 @@
     "from sklearn.linear_model import Lasso\n",
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.linear_model import Ridge"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "eb884a0d-76b0-48f9-aa5e-4406dc72be61",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "def trait_name(trait_json):\n",
-    "    return f\"{trait_json['trait_type']}_{trait_json['value'].replace(' ', '-')}\""
    ]
   },
   {
@@ -212,10 +286,6 @@
     "        return None # need to understand better, OpenSea seems to be doing weird stuff w/USDC sales.\n",
     "    eth_price = float(so['payment_token_contract']['eth_price'])\n",
     "    return (float(so['current_price']) / 1000000000000000000.0) * eth_price\n",
-    "\n",
-    "def convert_ts_string(ts_str):\n",
-    "    \"\"\"Strips fractional seconds before conversion.\"\"\"\n",
-    "    return datetime.strptime(ts_str.split('.')[0], '%Y-%m-%dT%H:%M:%S')\n",
     "\n",
     "def json_to_last_sale_price(in_json, in_last_days=30):\n",
     "    \"\"\"Prices are based on prior sales. Denominated in ETH.\"\"\"\n",
@@ -300,13 +370,21 @@
     "            if v and (idx not in seen_feature_idx):\n",
     "                return False\n",
     "        return True\n",
-    "    sale_deltas = [(aid, model.predict([assets[aid][0]])[0], assets[aid][2]) for aid in assets if assets[aid][2] and all_traits_seen(assets[aid])]\n",
+    "    sale_deltas = [(aid, model.predict([assets[aid][0]])[0], assets[aid][2]) for aid in assets if assets[aid][2] and assets[aid][2] < 60 and all_traits_seen(assets[aid])]\n",
     "    deals = list(filter(lambda x: x[1] - x[2] > 0, sale_deltas))\n",
     "    deals.sort(key=lambda x: x[2] - x[1])\n",
     "    print(f\"Deals (total {len(deals)}/{len(sale_deltas)})\\t(id, predicted price, sale price, delta, ROI)\")\n",
     "    for x in deals[:top_n]:\n",
     "        delta = x[1] - x[2]\n",
     "        print(f\"\\t{x[0]}\\t{x[1]}\\t{x[2]}\\t{delta}\\t{delta/x[2]}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4644cbb4-6eaf-49b8-806b-39f1ec4f4c7a",
+   "metadata": {},
+   "source": [
+    "## Predicting prices based on last month sales"
    ]
   },
   {
@@ -365,6 +443,27 @@
     "model = LinearRegression(fit_intercept=False).fit(X, Y)\n",
     "eval_model(model, X, Y)\n",
     "find_deals(model, assets)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "28538127-8f68-4d8e-9971-239122e3d4dc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "explained_score(model, assets['8232'])\n",
+    "explained_score(model, assets['2493'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "26b613ba-eadc-45f4-b3ab-9d49e49fce23",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "explained_score(model, assets['2493'])"
    ]
   },
   {
@@ -428,27 +527,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36fcb328-a90d-422e-b938-91e67f027f59",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7251d4b2-2b4b-477d-ae0c-d2f6deceabc9",
+   "id": "8a17d2e8-d6c0-4d8e-b435-4408e3f8498c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "## SCRATCH\n",
-    "\n",
-    "\n",
-    "with open(collection_file, 'r') as f:\n",
-    "    for l in f.readlines():\n",
-    "        json_asset = json.loads(l)\n",
-    "        if json_to_last_sale_price(json_asset) and json_asset['token_id'][0] != '1':\n",
-    "            print(json.dumps(json_asset))\n",
-    "            break"
+    "explained_score(rmodel, assets['8232'])\n",
+    "explained_score(rmodel, assets['2493'])"
    ]
   }
  ],
